minikube-demo/ingress/demo-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
  namespace: demo-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-api
  template:
    metadata:
      name: demo-api-pod
      labels:
        app: demo-api
    spec:
      containers:
        - name: demo-api
          image: venu1322/python-flask-app:0.0.2.RELEASE
          ports:
            - containerPort: 5000
          
---
apiVersion: v1
kind: Service
metadata:
  name: demo-api-service
  namespace: demo-namespace
spec:
  selector:
    app: demo-api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: demo-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      name: test-app-pod
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app-container
          image: venu1322/python-flask-app:0.0.1.RELEASE
          ports:
            - containerPort: 5000
          
---
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: demo-namespace
spec:
  selector:
    app: test-app
  ports:
    - name: http
      port: 3001
      targetPort: 5000
