minikube-demo/ingress/nginx-ingress-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  selector:
    app: nginx-app
  ports:
    - port: 8082
      targetPort: 80
